src/cdk8s/backend-c80ab48e.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment-c8846ad7
spec:
  replicas: 1
  selector:
    matchLabels:
      app: Backend
  template:
    metadata:
      labels:
        app: Backend
    spec:
      containers:
        - image: backend:1
          name: Backend
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service-c8794d84
spec:
  ports:
    - nodePort: 8080
      port: 8080
  selector:
    app: Backend
