src/cdk8s/backend.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment-c8d59eef
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: backend:1
          name: backend
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  ports:
    - port: 8080
  selector:
    app: backend
