src/cdk8s/frontend-c8dea0c1.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment-c85c00ee
spec:
  replicas: 3
  selector:
    matchLabels:
      app: Frontend
  template:
    metadata:
      labels:
        app: Frontend
    spec:
      containers:
        - image: frontend:1
          name: Frontend
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-c8bcf625
spec:
  ports:
    - nodePort: 80
      port: 80
  selector:
    app: Frontend
