src/cdk8s/frontend.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment-c87a7b0b
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: frontend:1
          name: frontend
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-c809d60e
spec:
  ports:
    - nodePort: 80
      port: 80
  selector:
    app: frontend
