src/cdk8s/sql-c8d389ac.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql-deployment-c82adcd2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: MySQL
  template:
    metadata:
      labels:
        app: MySQL
    spec:
      containers:
        - image: MySQL:9
          name: MySQL
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-persistent-storage
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: sql-mysql-service-c80c04f6
spec:
  ports:
    - port: 3306
  selector:
    app: MySQL
