src/cdk8s/sql.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql-deployment-c8b5eff9
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-sql
  template:
    metadata:
      labels:
        app: my-sql
    spec:
      containers:
        - image: mysql:9
          name: my-sql
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-persistent-storage
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: sql-mysql-service-c813063f
spec:
  ports:
    - port: 3306
  selector:
    app: my-sql
